--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
 body {
-    background-color: darkseagreen;
-
-    font-size: 24px;
-    line-height: 1.2;
-    font-family: Helvetica, Arial, sans-serif;
-    color: #45343A;
+    background-color: rgb(156, 216, 179);
 }
 
 div {
     text-align: center;
 }
-div.left {
-    color: rgb(35, 97, 73);
-    text-align: left;
+
+p {
+    font-family: Helvetica, Arial, sans-serif;
+    color: #45343A;
+    font-size: 24px;
+
+    line-height: 1.2;
+    padding-left: 80px;
+    padding-right: 80px;
+}
+p.title {
+    font-size: 28px;
+    font-weight: 600;
+    text-align: center;
+}
+p.text {
+    text-indent: 50px;
+    text-align: justify;
+}
+p.label {
+    text-align: right;
+    color: navy;
+}
+
+a {
+    font-family: Helvetica, Arial, sans-serif;
+    color: red;
+    font-size: 18px;
 }
